--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,40 @@
 absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
 attrs==24.2.0
+certifi==2024.8.30
 cffi==1.17.1
+charset-normalizer==3.4.0
 contourpy==1.3.0
 cycler==0.12.1
 flatbuffers==24.3.25
 fonttools==4.54.1
+frozenlist==1.4.1
+idna==3.10
 jax==0.4.34
 jaxlib==0.4.34
 kiwisolver==1.4.7
 matplotlib==3.9.2
 mediapipe==0.10.14
 ml_dtypes==0.5.0
+mss==9.0.2
+multidict==6.1.0
 numpy==2.1.2
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
 opt_einsum==3.4.0
 packaging==24.1
 pillow==11.0.0
+propcache==0.2.0
 protobuf==4.25.5
 pycparser==2.22
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+pywin32==308
+requests==2.32.3
 scipy==1.14.1
 six==1.16.0
 sounddevice==0.5.1
+urllib3==2.2.3
+yarl==1.15.5
